kubernates-yaml/application-yaml/alloy-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: alloy
  
spec:
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      serviceAccountName: alloy
      containers:
      - name: alloy
        image: grafana/alloy:latest
        args:
          - "run"
          - "/etc/alloy/config.alloy"
          
        volumeMounts:
          - name: alloy-config
            mountPath: /etc/alloy
          - name: varlog
            mountPath: /var/log
          - name: varlibdockercontainers
            mountPath: /var/lib/docker/containers
            readOnly: true
      volumes:
        - name: alloy-config
          configMap:
            name: alloy-config
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
