kubernates-yaml/application-yaml/eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  labels:
    app: eureka
spec:
  replicas: 1  # Number of desired pods
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka-server
          image: 8357/eureka-server:1.0.0
          ports:
            - containerPort: 8761
            
            
---

apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  selector:
    app: eureka
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: NodePort  # Can be NodePort or ClusterIP depending on your setup
