kubernates-yaml/application-yaml/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
spec:
  replicas: 1  # Number of desired pods
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: 8357/orders:1.0.0
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: orders
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
    # Can be NodePort or ClusterIP depending on your setup
