kubernates-yaml/application-yaml/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  labels:
    app: products
spec:
  replicas: 1  # Number of desired pods
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: 8357/products:1.0.0
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: products
spec:
  selector:
    app: products
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
    # Can be NodePort or ClusterIP depending on your setup
