kubernates-yaml/application-yaml/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  labels:
    app: react
spec:
  replicas: 2  # Number of desired pods
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react
          image: 8357/e-commerse:1.0.0
          ports:
            - containerPort: 80
            
            
---

apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
  type: NodePort  # Can be NodePort or ClusterIP depending on your setup
